add header and main banner

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
 
     <!-- HEADER -->
-    <header>
-      <nav class="container">
-        <div>
-          <img src="resources/images/ic-logo.svg" />
-          <span>Colmar</span><span>Academy</span>
-        </div>
+    <header class="container">
+      <div class="logo">
+        <img src="resources/images/ic-logo.svg" />
+        <h3>COLMAR<span>ACADEMY</span></h3>
+      </div>
+      <nav>
         <div class="menu">
           <ul>
             <li>On Campus</li>
@@ -29,22 +29,22 @@
     </header>
 
 <!-- MAIN BANNER -->
-    <div class="banner container">
-      <img src="resources/images/banner.jpg" class="banner-image" alt="Students studying" />
-      <div class="headline">
-        <h1>Learn something new everyday</h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+    <div class="main-banner">
+        <div class="banner">
+          <img src="resources/images/banner.jpg" class="banner-image" alt="Students studying" />
+        </div>
+          <div class="headline">
+            <h1>Learn something new everyday</h1><br>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2><br>
+            <a href="#" class="button">Start Here</a>
+          </div>
       </div>
-      <nav>
-        <a href="#" class="button">Start Here</a>
-      </nav>
-    </div>
 
 <!-- INFORMATION SECTION -->
 
-<div class="info container">
-  <div class="banner-left">
-    <img href="resources/images/information-main.jpg" class="info-image" alt="Man studying" />
+<div class="info">
+  <div class="banner">
+    <img src="resources/images/information-main.jpg" class="info-image" alt="Man studying" />
       <h2>It doesn't hurt to keep practicing</h2>
       <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
       <p>Emanuel, Sr. Strategist at Hiring.com</p>
@@ -52,16 +52,19 @@
     <div class="menu2">
       <div class="menu-item">
         <img src="resources/images/information-orientation.jpg" class="orientation" />
+        <h3>Orientation Date</h3>
         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
         <a href="#">Read More</a>
       </div>
       <div class="menu-item">
         <img src="resources/images/information-campus.jpg" class="campus" />
+        <h3>Our Campus</h3>
         <p>Find which campus is close by you</p>
         <a href="#">Read More</a>
       </div>
       <div class="menu-item">
         <img src="resources/images/information-guest-lecture.jpg" class="lecture" />
+        </h3>Our Guest Lecture</h3>
         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
         <a href="#">Read More</a>
       </div>
@@ -70,66 +73,58 @@
 
 <!-- START LEARNING -->
 
-<div class="lear container">
+<div class="learn">
   <h2>Start learning</h2>
     <div id="subjects">
       <a href="#" class="subject">
-        <img src="resources/images/course-software.jpg" alt="desk with computer on it"/>
+        <img src="resources/images/course-software.jpg" alt="desk with computer on it"/></a>
         <h4>Softwear Engineering</h4>
         <span>Courses</span>
         <p>Web Development, Mobile Development, iOT, APIs</p>
-      </a>
     </div>
     <div id="subjects">
       <a href="#" class="subject">
-        <img src="resources/images/course-computer-art.jpg" alt="Person holding a phone"/>
+        <img src="resources/images/course-computer-art.jpg" alt="Person holding a phone"/></a>
         <h4>Computer Art</h4>
         <span>Courses</span>
         <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-      </a>
     </div>
     <div id="subjects">
       <a href="#" class="subject">
-        <img src="resources/images/course-design.jpg" alt="Person holding a camera"/>
+        <img src="resources/images/course-design.jpg" alt="Person holding a camera"/></a>
         <h4>Design</h4>
         <span>Courses</span>
         <p>User Experience Design, User Research, Visual Design</p>
-      </a>
     </div>
     <div id="subjects">
       <a href="#" class="subject">
-        <img src="resources/images/course-data.jpg" alt="Photo of a Laptop"/>
+        <img src="resources/images/course-data.jpg" alt="Photo of a Laptop"/></a>
         <h4>Data</h4>
         <span>Courses</span>
         <p>Data Science, Big Data, SQL, Data Visualization</p>
-      </a>
     </div>
     <div id="subjects">
       <a href="#" class="subject">
-        <img src="resources/images/course-business.jpg" alt="Photo of a chess board"/>
+        <img src="resources/images/course-business.jpg" alt="Photo of a chess board"/></a>
         <h4>Business</h4>
         <span>Courses</span>
         <p>Product Development, Business Development, Startup</p>
-      </a>
     </div>
     <div id="subjects">
       <a href="#" class="subject">
-        <img src="resources/images/course-marketing.jpg" alt="Photo of person wearing a watch"/>
+        <img src="resources/images/course-marketing.jpg" alt="Photo of person wearing a watch"/></a>
         <h4>Marketing</h4>
         <span>Courses</span>
         <p>Analytics, Content Marketing, Mobile Marketing</p>
-      </a>
     </div>
 </div>
 
 <!-- THESIS EXHIBITS -->
 
   <div class="thesis">
-    <h2>Thesis Exhibits</h2>
-      <div class="container">
-        <div class="video">
+      <h2>Thesis Exhibits</h2>
+      <div class="banner">
           <video src="resources/videos/thesis.mp4" controls="Video not supported"/>
-        </div>
       <h3>Reimagine Urban</h3>
       <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
       <div class="menu">
