--- a/index.html
+++ b/index.html
@@ -47,26 +47,32 @@
     <img src="resources/images/information-main.jpg" class="info-image" alt="Man studying" />
       <h2>It doesn't hurt to keep practicing</h2>
       <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-      <p>Emanuel, Sr. Strategist at Hiring.com</p>
+      <span><p>-Emanuel, Sr. Strategist at Hiring.com</p></span>
   </div>
     <div class="menu2">
       <div class="menu-item">
-        <img src="resources/images/information-orientation.jpg" class="orientation" />
-        <h3>Orientation Date</h3>
-        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-        <a href="#">Read More</a>
+          <img src="resources/images/information-orientation.jpg" class="orientation" />
+        <div class="info-text">
+          <h3>Orientation Date</h3>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a href="#">Read More</a>
+        </div>
       </div>
       <div class="menu-item">
-        <img src="resources/images/information-campus.jpg" class="campus" />
-        <h3>Our Campus</h3>
-        <p>Find which campus is close by you</p>
-        <a href="#">Read More</a>
+          <img src="resources/images/information-campus.jpg" class="campus" />
+        <div class="info-text">
+          <h3>Our Campus</h3>
+          <p>Find which campus is close by you</p>
+          <a href="#">Read More</a>
+        </div>
       </div>
       <div class="menu-item">
-        <img src="resources/images/information-guest-lecture.jpg" class="lecture" />
-        </h3>Our Guest Lecture</h3>
-        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-        <a href="#">Read More</a>
+          <img src="resources/images/information-guest-lecture.jpg" class="lecture" />
+        <div class="info-text">
+          <h3>Our Guest Lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <a href="#">Read More</a>
+        </div>
       </div>
     </div>
 </div>
