add thesis and footer formatting

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 <div class="info">
   <div class="banner">
     <img src="resources/images/information-main.jpg" class="info-image" alt="Man studying" />
+    <div class="image-caption">
       <h2>It doesn't hurt to keep practicing</h2>
       <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
       <span><p>-Emanuel, Sr. Strategist at Hiring.com</p></span>
+    </div>
   </div>
     <div class="menu2">
       <div class="menu-item">
@@ -80,84 +82,105 @@
 <!-- START LEARNING -->
 
 <div class="learn">
-  <h2>Start learning</h2>
-    <div id="subjects">
+
+    <h2>Start learning</h2>
+
+    <div class="subjects">
       <a href="#" class="subject">
-        <img src="resources/images/course-software.jpg" alt="desk with computer on it"/></a>
-        <h4>Softwear Engineering</h4>
-        <span>Courses</span>
-        <p>Web Development, Mobile Development, iOT, APIs</p>
-    </div>
-    <div id="subjects">
+        <div>
+          <img src="resources/images/course-software.jpg" alt="desk with computer on it"/>
+          <h3>Softwear Engineering</h3>
+          <span>Courses</span>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+      </a>
+
       <a href="#" class="subject">
-        <img src="resources/images/course-computer-art.jpg" alt="Person holding a phone"/></a>
-        <h4>Computer Art</h4>
-        <span>Courses</span>
-        <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-    </div>
-    <div id="subjects">
+        <div>
+          <img src="resources/images/course-computer-art.jpg" alt="Person holding a phone"/>
+          <h3>Computer Art</h3>
+          <span>Courses</span>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+      </a>
+
       <a href="#" class="subject">
-        <img src="resources/images/course-design.jpg" alt="Person holding a camera"/></a>
-        <h4>Design</h4>
-        <span>Courses</span>
-        <p>User Experience Design, User Research, Visual Design</p>
-    </div>
-    <div id="subjects">
+        <div>
+          <img src="resources/images/course-design.jpg" alt="Person holding a camera"/>
+          <h3>Design</h3>
+          <span>Courses</span>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+      </a>
+
       <a href="#" class="subject">
-        <img src="resources/images/course-data.jpg" alt="Photo of a Laptop"/></a>
-        <h4>Data</h4>
-        <span>Courses</span>
-        <p>Data Science, Big Data, SQL, Data Visualization</p>
-    </div>
-    <div id="subjects">
+        <div>
+          <img src="resources/images/course-data.jpg" alt="Photo of a Laptop"/>
+          <h3>Data</h3>
+          <span>Courses</span>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+      </div>
+    </a>
+
       <a href="#" class="subject">
-        <img src="resources/images/course-business.jpg" alt="Photo of a chess board"/></a>
-        <h4>Business</h4>
-        <span>Courses</span>
-        <p>Product Development, Business Development, Startup</p>
-    </div>
-    <div id="subjects">
+        <div>
+          <img src="resources/images/course-business.jpg" alt="Photo of a chess board"/>
+          <h3>Business</h3>
+          <span>Courses</span>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+      </a>
+
       <a href="#" class="subject">
-        <img src="resources/images/course-marketing.jpg" alt="Photo of person wearing a watch"/></a>
-        <h4>Marketing</h4>
-        <span>Courses</span>
-        <p>Analytics, Content Marketing, Mobile Marketing</p>
+        <div>
+          <img src="resources/images/course-marketing.jpg" alt="Photo of person wearing a watch"/>
+          <h3>Marketing</h3>
+          <span>Courses</span>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </a>
+
     </div>
 </div>
 
 <!-- THESIS EXHIBITS -->
-
+<div class="thesis-headline">
+  <h2>Thesis Exhibits</h2>
+</div>
   <div class="thesis">
-      <h2>Thesis Exhibits</h2>
       <div class="banner">
           <video src="resources/videos/thesis.mp4" controls="Video not supported"/>
-      <h3>Reimagine Urban</h3>
-      <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-      <div class="menu">
+        <div class="video-caption">
+          <h3>Reimagine Urban</h3>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        </div>
+      </div>
+      <div class="menu2">
         <div class="menu-item">
           <img src="resources/images/thesis-fisma.jpg" />
-          <h4>Fisma: Design and Prototype</h4>
+        <div class="info-text">
+          <h3>Fisma: Design and Prototype</h3>
           <p>Designer showcase of new prototype product</p>
+        </div>
         </div>
         <div class="menu-item">
           <img src="resources/images/thesis-now-and-then.jpg" />
-          <h4>Now and Then</h4>
-          <p>Research study about New York</p>
+        <div>
+            <h3>Now and Then</h3>
+            <p>Research study about New York</p>
+        </div>
         </div>
       </div>
-    </div>
   </div>
 
   <!-- FOOTER -->
 
     <footer>
-      <div class="container">
         <p>©2018 Colmar Academy. All rights reserved.<p/>
           <nav class="footer-nav">
             <a href="#">Terms</a>
             <a href="#">Privacy</a>
           </nav>
-      </div>
     </footer>
   </body>
 </html>
