--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
 <!-- MAIN BANNER -->
-    <div class="main-banner">
+    <div class="main-banner container">
         <div class="banner">
           <img src="resources/images/banner.jpg" class="banner-image" alt="Students studying" />
         </div>
@@ -42,7 +42,7 @@
 
 <!-- INFORMATION SECTION -->
 
-<div class="info">
+<div class="info container">
   <div class="banner">
     <img src="resources/images/information-main.jpg" class="info-image" alt="Man studying" />
     <div class="image-caption">
@@ -81,7 +81,7 @@
 
 <!-- START LEARNING -->
 
-<div class="learn">
+<div class="learn container">
 
     <h2>Start learning</h2>
 
@@ -89,54 +89,66 @@
       <a href="#" class="subject">
         <div>
           <img src="resources/images/course-software.jpg" alt="desk with computer on it"/>
-          <h3>Softwear Engineering</h3>
-          <span>Courses</span>
-          <p>Web Development, Mobile Development, iOT, APIs</p>
+          <div class="sub-info">
+            <h3>Softwear Engineering</h3>
+            <p class="course">Courses</p>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
         </div>
       </a>
 
       <a href="#" class="subject">
         <div>
           <img src="resources/images/course-computer-art.jpg" alt="Person holding a phone"/>
-          <h3>Computer Art</h3>
-          <span>Courses</span>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          <div class="sub-info">
+            <h3>Computer Art</h3>
+            <p class="course">Courses</p>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          </div>
         </div>
       </a>
 
       <a href="#" class="subject">
         <div>
           <img src="resources/images/course-design.jpg" alt="Person holding a camera"/>
-          <h3>Design</h3>
-          <span>Courses</span>
-          <p>User Experience Design, User Research, Visual Design</p>
+          <div class="sub-info">
+            <h3>Design</h3>
+            <p class="course">Courses</p>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
         </div>
       </a>
 
       <a href="#" class="subject">
         <div>
           <img src="resources/images/course-data.jpg" alt="Photo of a Laptop"/>
-          <h3>Data</h3>
-          <span>Courses</span>
-          <p>Data Science, Big Data, SQL, Data Visualization</p>
+          <div class="sub-info">
+            <h3>Data</h3>
+            <p class="course">Courses</p>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
       </div>
     </a>
 
       <a href="#" class="subject">
         <div>
           <img src="resources/images/course-business.jpg" alt="Photo of a chess board"/>
-          <h3>Business</h3>
-          <span>Courses</span>
-          <p>Product Development, Business Development, Startup</p>
+          <div class="sub-info">
+            <h3>Business</h3>
+            <p class="course">Courses</p>
+            <p>Product Development, Business Development, Startup</p>
+        </div>
         </div>
       </a>
 
       <a href="#" class="subject">
         <div>
           <img src="resources/images/course-marketing.jpg" alt="Photo of person wearing a watch"/>
-          <h3>Marketing</h3>
-          <span>Courses</span>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
+          <div class="sub-info">
+            <h3>Marketing</h3>
+            <p class="course">Courses</p>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
         </div>
       </a>
 
@@ -144,14 +156,15 @@
 </div>
 
 <!-- THESIS EXHIBITS -->
+
 <div class="thesis-headline">
   <h2>Thesis Exhibits</h2>
 </div>
-  <div class="thesis">
-      <div class="banner">
-          <video src="resources/videos/thesis.mp4" controls="Video not supported"/>
+ <div class="thesis">
+    <div class="thesis-banner">
+        <video src="resources/videos/thesis.mp4" controls="Video not supported"></video>
         <div class="video-caption">
-          <h3>Reimagine Urban</h3>
+          <h2>Reimagine Urban</h2>
           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
         </div>
       </div>
@@ -175,7 +188,7 @@
 
   <!-- FOOTER -->
 
-    <footer>
+    <footer class="container">
         <p>©2018 Colmar Academy. All rights reserved.<p/>
           <nav class="footer-nav">
             <a href="#">Terms</a>
