add header and main banner meda queries

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <!-- HEADER -->
+<!-- HEADER -->
     <header class="container">
       <div class="logo">
         <img src="resources/images/ic-logo.svg" />
@@ -21,14 +21,30 @@
             <li>For Companies</li>
             <li>Sign In</li>
           </ul>
-          <ul class="phone-menu">
-            <li>Menu<li>
-          </ul>
         </div>
       </nav>
     </header>
+    <!-- HEADER - MOBILE -->
+
+        <header class="phone-menu">
+          <nav>
+            <a href="#">
+              <img src="resources/images/ic-logo.svg" alt="Colmar Academy Logo" />
+            </a>
+            <a href="#">
+              <img src="resources/images/ic-on-campus.svg" alt="On Campus Icon" />
+            </a>
+            <a href="#">
+              <img src="resources/images/ic-online.svg" alt="Online Icon" />
+            </a>
+            <a href="#">
+              <img src="resources/images/ic-login.svg" alt="Login Icon" />
+            </a>
+          </nav>
+        </header>
 
 <!-- MAIN BANNER -->
+  <div id="banner">
     <div class="main-banner container">
         <div class="banner">
           <img src="resources/images/banner.jpg" class="banner-image" alt="Students studying" />
@@ -39,6 +55,7 @@
             <a href="#" class="button">Start Here</a>
           </div>
       </div>
+    </div>
 
 <!-- INFORMATION SECTION -->
 
