--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
   </div>
     <div class="menu2">
       <div class="menu-item">
-          <img src="resources/images/information-orientation.jpg" class="orientation" />
+          <img src="resources/images/information-orientation.jpg" class="desktop" />
+          <img src="resources/images/information-orientation-mobile.jpg" class="mobile" />
         <div class="info-text">
           <h3>Orientation Date</h3>
           <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -78,7 +79,8 @@
         </div>
       </div>
       <div class="menu-item">
-          <img src="resources/images/information-campus.jpg" class="campus" />
+          <img src="resources/images/information-campus.jpg" class="desktop" />
+          <img src="resources/images/information-campus-mobile.jpg" class="mobile" />
         <div class="info-text">
           <h3>Our Campus</h3>
           <p>Find which campus is close by you</p>
@@ -86,7 +88,8 @@
         </div>
       </div>
       <div class="menu-item">
-          <img src="resources/images/information-guest-lecture.jpg" class="lecture" />
+          <img src="resources/images/information-guest-lecture.jpg" class="desktop" />
+          <img src="resources/images/information-guest-lecture-mobile.jpg" class="mobile" />
         <div class="info-text">
           <h3>Our Guest Lecture</h3>
           <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -100,7 +103,7 @@
 
 <div class="learn container">
 
-    <h2>Start learning</h2>
+    <h2>Start Learning</h2>
 
     <div class="subjects">
       <a href="#" class="subject">
