--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Colmar Academy</title>
     <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
     <link rel='stylesheet' type='text/css' href='resources/css/style.css'>
+    <link rel="icon" href="resources/images/logo.ico" type="image/x-icon">
   </head>
   <body>
 
@@ -19,7 +20,7 @@
             <li>On Campus</li>
             <li>Online</li>
             <li>For Companies</li>
-            <li>Sign In</li>
+            <li><span>Sign In</span></li>
           </ul>
         </div>
       </nav>
@@ -63,7 +64,7 @@
   <div class="banner">
     <img src="resources/images/information-main.jpg" class="info-image" alt="Man studying" />
     <div class="image-caption">
-      <h2>It doesn't hurt to keep practicing</h2>
+      <h1>It doesn't hurt to keep practicing</h1>
       <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
       <span><p>-Emanuel, Sr. Strategist at Hiring.com</p></span>
     </div>
