fix header links

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <nav>
         <div class="menu">
           <ul>
-            <li>On Campus</li>
-            <li>Online</li>
-            <li>For Companies</li>
-            <li><span>Sign In</span></li>
+            <li><a href="#">On Campus</a></li>
+            <li><a href="#">Online</a></li>
+            <li><a href="#">For Companies</a></li>
+            <li><a href="#"><span>Sign In</span></a></li>
           </ul>
         </div>
       </nav>
