add responsive meta

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
     <link rel='stylesheet' type='text/css' href='resources/css/style.css'>
     <link rel="icon" href="resources/images/logo.ico" type="image/x-icon">
+    <meta name="viewport" content=" width=devie-width">
   </head>
   <body>
 
